fix some server tests, mockito 'spy' still out of order